--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -1,3 +1,6 @@
 {{! implement all iCheck variations here}}
-{{i-check type="checkbox" value=a}}
+{{i-check type="checkbox" checked=a}}
+<hr>
+{{input type="checkbox" checked=a}}
+<hr>
 {{a}}
