--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,5 @@
 <h2 id='title'>ember-cli-icheck Dummy</h2>
-
+{{#link-to 'application'}} Home {{/link-to}}
+{{#link-to 'about'}} Another Page {{/link-to}}
+<hr>
 {{outlet}}
